solved gap issue in poup

--- a/sites/all/themes/mortgagespeak/src/sass/style.scss
+++ b/sites/all/themes/mortgagespeak/src/sass/style.scss
@@ -984,7 +984,7 @@ a {
               }
               .flag-saved-articles {
                 a {
-                  margin: 0 0 0 15px;
+                  /*margin: 0 0 0 15px;*/
                 }
               }
             }
